tests/reference/asr-expr3-10eb0a4.stderr
semantic error: Type mismatch in shorthand operator, the types must be compatible
 --> tests/expr3.py:6:5
  |
6 |     a *= b
  |     ^    ^ type mismatch ('i32' and 'f32')
